# derouter

./: Cargo.toml  README.md  config.example.jsonc
.github/workflows/: build.yaml
db/migrations/001-create_peers/: up.sql
db/migrations/002-create_offer_snapshots/: down.sql  up.sql
db/migrations/002-create_offers/: up.sql
db/migrations/003-create_service_connections/: down.sql  up.sql
db/transient/migrations/001-create_providers/: up.sql
src/: database.rs  db.rs  dto.rs  logger.rs  main.rs  p2p.rs  rpc.rs  server.rs  state.rs  util.rs
src/database/: cleanup.rs  create_service_connection.rs  offers.rs  providers.rs  service_connections.rs  service_jobs.rs
src/database/service_jobs/: fail.rs  get.rs  query_all.rs  set_confirmation_error.rs
src/database/service_jobs/consumer/: confirm.rs  (+4 more)
src/db/: cleanup.rs  offers.rs  providers.rs  service_connections.rs  service_jobs.rs
src/db/service_jobs/: consumer.rs  create.rs  fail.rs  get.rs  provider.rs  query_all.rs  set_confirmation_error.rs
src/p2p/: gossipsub.rs  handle_heartbeat.rs  job_confirmation_scheduler.rs  proto.rs  reqres.rs  stream.rs
src/p2p/gossipsub/: heartbeat.rs
src/p2p/proto/: gossipsub.rs  request_response.rs  stream.rs
src/p2p/reqres/: confirm_job.rs  create_job.rs  get_job.rs
src/p2p/stream/: job_connection.rs
src/rpc/: connection.rs  procedure.rs  server.rs
src/rpc/procedure/: consumer.rs  fail_job.rs  provider.rs  query.rs  subscription.rs
src/server/: consumer.rs  provider.rs
src/server/provider/: rpc.rs
src/util/: cbor.rs  logged_mutex.rs  logged_rw_lock.rs  yamux.rs
(+66 files in other folders)
