[package]
name = "derouter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
eyre = "0.6.12"
flexi_logger = "0.29.8"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server"] }
hyper-tungstenite = "0.17.0"
hyper-util = { version = "0.1.10", features = [
  "http1",
  "server",
  "tokio",
  "server-graceful",
] }
log = "0.4.26"
serde = { version = "1.0.219", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = [
  "rt-multi-thread",
  "macros",
  "net",
  "signal",
] }
tokio-util = { version = "0.7.14", features = ["compat", "rt"] }
yamux = "0.13.4"
rusqlite = { version = "^0.32", features = [
  "bundled",
  "chrono",
  "vtab",
  "array",
] }
include_dir = "0.7.4"
rusqlite_migration = { version = "1.3.1", features = ["from-directory"] }
directories = "6.0.0"
unwrap_none = "0.1.2"
libp2p = { version = "0.55.0", features = [
  "dns",
  "identify",
  "macros",
  "noise",
  "ping",
  "quic",
  "serde",
  "tcp",
  "tokio",
  "yamux",
  "request-response",
  "cbor",
  "mdns",
  "gossipsub",
] }
libp2p-stream = "0.3.0-alpha"
chrono = { version = "0.4.40", features = ["serde"] }
json5 = "0.4.1"
either = "1.15.0"
